// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Representation contact method page GET /applications-service/case/1/relevant-representations/contact-method should render the page 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <p class=\\"govuk-body\\"><strong>Project name:</strong> mock title</p><span class=\\"govuk-caption-l\\">Add a representation</span>
    <div     class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-one-half\\">
            <form method=\\"post\\" novalidate>
                <div class=\\"govuk-form-group\\">
                    <fieldset class=\\"govuk-fieldset\\">
                        <legend class=\\"govuk-fieldset__legend govuk-fieldset__legend--l\\">
                            <h1 class=\\"govuk-fieldset__heading\\"> Preferred contact method</h1>
                        </legend>
                        <div class=\\"govuk-radios\\" data-module=\\"govuk-radios\\">
                            <div class=\\"govuk-radios__item\\">
                                <input class=\\"govuk-radios__input\\" id=\\"contactMethod\\" name=\\"contactMethod\\"
                                type=\\"radio\\" value=\\"email\\">
                                <label class=\\"govuk-label govuk-radios__label\\" for=\\"contactMethod\\">Email</label>
                            </div>
                            <div class=\\"govuk-radios__item\\">
                                <input class=\\"govuk-radios__input\\" id=\\"contactMethod-2\\" name=\\"contactMethod\\"
                                type=\\"radio\\" value=\\"post\\">
                                <label class=\\"govuk-label govuk-radios__label\\" for=\\"contactMethod-2\\">Post</label>
                            </div>
                        </div>
                    </fieldset>
                </div>
                <button type=\\"submit\\" class=\\"govuk-button govuk-!-margin-top-3\\" data-module=\\"govuk-button\\">Save and continue</button>
            </form>
        </div>
        </div>
</main>"
`;

exports[`Representation contact method page POST /applications-service/case/1/relevant-representations/contact-method Field validation: should show validation error if no option selected 1`] = `
"<main class=\\"govuk-main-wrapper \\" id=\\"main-content\\" role=\\"main\\">
    <div class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-two-thirds\\">
            <div class=\\"govuk-error-summary\\" data-module=\\"govuk-error-summary\\">
                <div role=\\"alert\\">
                    <h2 class=\\"govuk-error-summary__title\\"> There is a problem</h2>
                    <div class=\\"govuk-error-summary__body\\">
                        <ul class=\\"govuk-list govuk-error-summary__list\\">
                            <li><a href=\\"#contactMethod\\">Select one option</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <p class=\\"govuk-body\\"><strong>Project name:</strong> mock title</p><span class=\\"govuk-caption-l\\">Add a representation</span>
    <div     class=\\"govuk-grid-row\\">
        <div class=\\"govuk-grid-column-one-half\\">
            <form method=\\"post\\" novalidate>
                <div class=\\"govuk-form-group govuk-form-group--error\\">
                    <fieldset class=\\"govuk-fieldset\\" aria-describedby=\\"contactMethod-error\\">
                        <legend class=\\"govuk-fieldset__legend govuk-fieldset__legend--l\\">
                            <h1 class=\\"govuk-fieldset__heading\\"> Preferred contact method</h1>
                        </legend>
                        <p id=\\"contactMethod-error\\" class=\\"govuk-error-message\\"><span class=\\"govuk-visually-hidden\\">Error:</span> Select one option</p>
                        <div                         class=\\"govuk-radios\\" data-module=\\"govuk-radios\\">
                            <div class=\\"govuk-radios__item\\">
                                <input class=\\"govuk-radios__input\\" id=\\"contactMethod\\" name=\\"contactMethod\\"
                                type=\\"radio\\" value=\\"email\\">
                                <label class=\\"govuk-label govuk-radios__label\\" for=\\"contactMethod\\">Email</label>
                            </div>
                            <div class=\\"govuk-radios__item\\">
                                <input class=\\"govuk-radios__input\\" id=\\"contactMethod-2\\" name=\\"contactMethod\\"
                                type=\\"radio\\" value=\\"post\\">
                                <label class=\\"govuk-label govuk-radios__label\\" for=\\"contactMethod-2\\">Post</label>
                            </div>
                </div>
                </fieldset>
        </div>
        <button type=\\"submit\\" class=\\"govuk-button govuk-!-margin-top-3\\" data-module=\\"govuk-button\\">Save and continue</button>
        </form>
        </div>
        </div>
</main>"
`;
